[gd_scene load_steps=8 format=3 uid="uid://b2ii1dwbjera2"]

[ext_resource type="Script" uid="uid://bbck4r1248pvy" path="res://source/gui/menus/pause_menu.gd" id="1_u8v28"]
[ext_resource type="Texture2D" uid="uid://bvqhr785mj4g8" path="res://assets/title screen/BG.png" id="2_yxswi"]
[ext_resource type="Texture2D" uid="uid://bvmx30geg4a86" path="res://assets/ui/UI_Clock_cropped.png" id="3_0ifhu"]
[ext_resource type="Texture2D" uid="uid://2rrjknuptjgd" path="res://assets/ui/UI_Clock_cropped_dark.png" id="4_5j4if"]
[ext_resource type="FontFile" uid="uid://b00a6crxmm10e" path="res://assets/fonts/Pix32.ttf" id="5_6r2ei"]
[ext_resource type="PackedScene" uid="uid://dq4bjgb8c14c4" path="res://source/gui/menus/settings.tscn" id="6_5j4if"]

[sub_resource type="LabelSettings" id="LabelSettings_lpyh8"]
font = ExtResource("5_6r2ei")
font_size = 48
outline_size = 14
outline_color = Color(0.8627451, 0.4392157, 0.27058825, 1)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u8v28")

[node name="BGFade" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.78, 0.78, 0.78, 0.4509804)

[node name="PauseFrame" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_top = -300.0
offset_right = 1920.0

[node name="PauseBG" type="TextureRect" parent="PauseFrame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -1080.0
offset_right = 960.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_yxswi")
flip_v = true

[node name="MarginContainer" type="MarginContainer" parent="PauseFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PauseFrame/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PauseFrame/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="ResumeT" type="TextureButton" parent="PauseFrame/MarginContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("3_0ifhu")
texture_hover = ExtResource("4_5j4if")

[node name="Label" type="Label" parent="PauseFrame/MarginContainer/CenterContainer/HBoxContainer/ResumeT"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"
label_settings = SubResource("LabelSettings_lpyh8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsT" type="TextureButton" parent="PauseFrame/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_0ifhu")
texture_hover = ExtResource("4_5j4if")

[node name="Label" type="Label" parent="PauseFrame/MarginContainer/CenterContainer/HBoxContainer/OptionsT"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
text = "Options"
label_settings = SubResource("LabelSettings_lpyh8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitT" type="TextureButton" parent="PauseFrame/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_0ifhu")
texture_hover = ExtResource("4_5j4if")

[node name="Label" type="Label" parent="PauseFrame/MarginContainer/CenterContainer/HBoxContainer/QuitT"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"
label_settings = SubResource("LabelSettings_lpyh8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FGFade" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="Settings" parent="." instance=ExtResource("6_5j4if")]
visible = false
z_index = 40
layout_mode = 0

[connection signal="mouse_entered" from="PauseFrame/MarginContainer/CenterContainer/HBoxContainer/ResumeT" to="." method="_on_resume_t_mouse_entered"]
[connection signal="pressed" from="PauseFrame/MarginContainer/CenterContainer/HBoxContainer/ResumeT" to="." method="_on_resume_t_pressed"]
[connection signal="mouse_entered" from="PauseFrame/MarginContainer/CenterContainer/HBoxContainer/OptionsT" to="." method="_on_options_t_mouse_entered"]
[connection signal="pressed" from="PauseFrame/MarginContainer/CenterContainer/HBoxContainer/OptionsT" to="." method="_on_options_t_pressed"]
[connection signal="mouse_entered" from="PauseFrame/MarginContainer/CenterContainer/HBoxContainer/QuitT" to="." method="_on_quit_t_mouse_entered"]
[connection signal="pressed" from="PauseFrame/MarginContainer/CenterContainer/HBoxContainer/QuitT" to="." method="_on_quit_t_pressed"]
